# nemo-assistant

./: .gitattributes  .gitignore  AI_Agent.spec  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_LICENSES.md  LICENSE  LITELLM_INTEGRATION.md  LITELLM_MANAGEMENT_REPORT.md  LITELLM_UI_REPORT.md  Nemo_Assistant.spec  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  _verify_cap.py  build.bat  claude_design.md  codex_design.md  final_fix.py  fix_ai_client.py  fix_line130.py  fix_multi_model.py  main.py  pyproject.toml  requirements.txt  run.bat  study.md  test_cursor.py  test_litellm_management.py  test_litellm_ui.py  test_menu.py  todos.md
.github/: PULL_REQUEST_TEMPLATE.md
config/: app_config.example.json  params_config.json
docs/: FILE_UPLOAD_GUIDE.md  FILE_UPLOAD_IMPLEMENTATION.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_SYSTEM_PROMPT.md  MIGRATION.md  MIGRATION_SUMMARY.md  OPTIMIZATION_REPORT.md  P1_CHECKLIST.md  P1_IMPLEMENTATION_COMPLETE.md  P1_IMPLEMENTATION_SUMMARY.md  P1_USER_GUIDE.md  PRD_MODEL_SETTINGS.md  PRESET_DUPLICATE_CHECKLIST.md  PRESET_DUPLICATE_FEATURE.md  PRESET_EDIT_FEATURE.md  PRESET_EDIT_QUICKSTART.md  PRESET_EDIT_SUMMARY.md  PRESET_EDIT_TEST.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.zh-CN.md  TEST_SYSTEM_PROMPT.md  TODO_IMPLEMENTATION.md  TODO_SCREENSHOT_AI.md  TODO_SELECTION_REWRITE.md  TODO_TABLE_OCR.md  TODO_VERIFICATION.md  development-notes.md  edge-snap-width-implementation.md  edge-snap-width-threshold.md  local-rag-plan.md  memory-module-design.md  nanobot_analysis.md  release-checklist.md  screenshot-ai.md  security-model.md  功能深化与扩展建议.md  安全评测系统导览.md  工具错误处理对比.md  (+1 more)
scripts/: check_repo.py  migrate_json_to_sqlite.py  release_metadata.py  test_note_manager.py  verify_migration.py
study/: 工具模块学习路线.md  工具模块架构设计与重构实践.md  状态机在Agent循环中的应用.md  记忆模块实现学习指南.md
tests/: TAG_TEST_CHECKLIST.md  test_agent_loop.py  test_attachment_intake.py  test_chat_session_controller.py  test_conversation_prompt_builder.py  test_core_robustness.py  test_edge_snap_width.py  test_eval_judge.py  test_eval_metrics.py  test_eval_rule_checks.py  test_eval_scorer_store.py  test_exec_security.py  test_exec_tool.py  test_fetch_url_ssrf.py  test_file_parser.py  test_file_parser_simple.py  test_fixes.py  test_i18n.py  test_image_downscale.py  test_imports.py  test_input_widget.py  test_litellm_loader.py  test_llm_gateway.py  test_preset_ui.py  (+24 more)
(+207 files in other folders)
