[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-assistant"
version = "0.1.0"
description = "A local-first floating desktop AI assistant for selection actions, OCR screenshots, Markdown notes, stickies, tool calling, and chat."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SevenBT" }]
keywords = ["desktop-assistant", "pyqt6", "ai", "ocr", "markdown-notes", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]

# 运行依赖：跑起来这个应用必须安装的包。
dependencies = [
    "PyQt6>=6.5.0",
    "pyqt6-fluent-widgets>=1.11.0",
    "openai>=1.0.0",
    "APScheduler>=3.10.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pyperclip>=1.8.2",
    "rapidocr-onnxruntime>=1.2.0,<1.3.0",
    "numpy>=1.24.0",
    "keyring>=24.0.0",
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "uiautomation>=2.0.18",
    "pywin32>=306; platform_system == 'Windows'",
    "PyPDF2>=3.0.0",
    "Markdown>=3.4.0",
    "Pygments>=2.15.0",
    "html2text>=2020.1.16",
    "litellm>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SevenBT/nemo-assistant"
Repository = "https://github.com/SevenBT/nemo-assistant"
Issues = "https://github.com/SevenBT/nemo-assistant/issues"

[project.optional-dependencies]
# 开发 / 测试依赖：改代码、跑测试才需要，终端用户无需安装。
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
# 只打包应用代码，排除测试与工作区目录。
include = ["app*"]

[tool.pytest.ini_options]
# 只收集主项目 tests/，避免扫到 .venv 或 nanobot 子项目的第三方测试。
testpaths = ["tests"]
addopts = "-q"
markers = [
    "ui: 需要 QApplication 的测试",
    "integration: 集成测试（真实文件 / SQLite 等）",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
# 覆盖率只统计应用代码，排除测试、虚拟环境与独立子项目。
source = ["app"]
omit = [
    "tests/*",
    ".venv/*",
    "nanobot/*",
]

[tool.coverage.report]
show_missing = true
